# Sam2_tensorrt

./: CMakeLists.txt  README.md  main.cpp  sam2_python.py
include/: sam2.h
src/: sam2.cpp
